--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ appdirs==1.4.0
 packaging==16.8
 pyparsing==2.1.10
 six==1.10.0
+django-ckeditor==5.0.3
+gunicorn==19.4.5
+MySQL-python==1.2.5
+Pillow==3.2.0
+uWSGI==2.0.15
