--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,24 @@
 setuptools
 wheel
-Django==1.9.8
 appdirs==1.4.0
+cx-Oracle==6.1
+Django==1.9.8
+django-appconf==1.0.2
+django-ckeditor==5.0.3
+django-cors-headers==2.1.0
+django-guardian==1.4.1
+django-model-utils==3.0.0
+django-userena==2.0.1
+django-users2==0.2.1
+easy-thumbnails==2.5
+gunicorn==19.4.5
+html2text==2014.12.29
+meld3==1.0.2
+MySQL-python==1.2.5
 packaging==16.8
+Pillow==3.2.0
+psycopg2==2.7.3.2
 pyparsing==2.1.10
 six==1.10.0
-django-ckeditor==5.0.3
-gunicorn==19.4.5
-MySQL-python==1.2.5
-Pillow==3.2.0
 uWSGI==2.0.15
+virtualenv==15.1.0
